--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
-    "form-data": "^4.0.4"
+    "form-data": "^4.0.4",
+    "uuid": "^13.0.0"
   }
 }
